src/test/ui/parser/issues/issue-10636-2.stderr
error: mismatched closing delimiter: `}`
  --> $DIR/issue-10636-2.rs:5:15
   |
LL | pub fn trace_option(option: Option<isize>) {
   |                                            - closing delimiter possibly meant for this
LL |     option.map(|some| 42;
   |               ^ unclosed delimiter
LL |
LL | }
   | ^ mismatched closing delimiter

error: aborting due to previous error

